pkg/cilium/test/dpi_policy_test.yaml
apiVersion: "security.fos1.io/v1"
kind: DPIPolicy
metadata:
  name: test-dpi-policy
  namespace: default
spec:
  application: "http"
  action: "allow"
  priority: 1
  dscp: 0
  log: true
